feat: Cleanup Test Classes and Dependencies - Meeds-io/MIPs#42 - EXO-62860 (#786)
Prior to this change, the service testing was using powermock which is useless and restrictive in term of third party libraries dependency tree (complex to maintain with Java versions higher than JDK11). In addition, the dependency tree has been cleaned up as well to transitively import dependencies for compilation and test scope.
Some deleted Search classes from deprecated Search API has been copied here as well for smooth migration for a proper API to the current project module.